[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main Game/Enemy.gd" type="Script" id=1]
[ext_resource path="res://SFX/EnemyBounce.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprites/skull.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 13.3106

[node name="Enemy" type="RigidBody2D"]
position = Vector2( 29.6439, 26.1229 )
mode = 2
physics_material_override = SubResource( 3 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
playing = true

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="BounceSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
